syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/striped_second_entity.proto";

option java_outer_classname = "StripedSecondToTransactionService";

service StripedSecondToTransaction {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnTransactionPaid(entity.TransactionPaid) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "striped_second"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "striped_second"
    };
  }
}
